User registration and logging work in progress /3

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -40,8 +40,8 @@
                                    id="email"
                                    class="form-control input-sm"
                                    placeholder="Email Address"
-                                   th:field="*{email}"
-                                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                                   th:field="*{email}">
+<!--                                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">-->
                         </div>
 
                         <div class="row">
@@ -52,8 +52,8 @@
                                            id="username"
                                            class="form-control input-sm"
                                            placeholder="Username"
-                                           th:field="*{username}"
-                                           pattern=".{3,50}">
+                                           th:field="*{username}">
+<!--                                           pattern=".{3,50}">-->
                                     <small>*3-50 characters
                                     </small>
                                 </div>
@@ -68,8 +68,8 @@
                                            id="password"
                                            class="form-control input-sm"
                                            placeholder="Password*"
-                                           th:field="*{password}"
-                                           pattern=".{8,30}">
+                                           th:field="*{password}">
+<!--                                           pattern=".{8,30}">-->
                                     <small>*8-30
                                            characters
                                     </small>
@@ -83,8 +83,8 @@
                                            id="password_confirmation"
                                            class="form-control input-sm"
                                            placeholder="Confirm Password"
-                                           th:field="*{confirmPassword}"
-                                           pattern=".{8,30}">
+                                           th:field="*{confirmPassword}">
+<!--                                           pattern=".{8,30}">-->
                                 </div>
                             </div>
 
