--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,6 +46,8 @@
                             <button type="submit"
                                     class="btn btn-primary btn-block"> Login
                             </button>
+                            <div th:object="${error}">
+                            </div>
                         </div>
                     </form>
                 </article>
