--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -93,6 +93,7 @@
                         <input type="submit"
                                value="Register"
                                class="btn btn-info btn-block">
+                        <div th:text="${error}"></div>
 
                     </form>
                 </div>
