--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+
 <head>
 
     <!-- Required meta tags -->
@@ -20,7 +22,12 @@
 <body>
 <div th:include="/navbar/navbar.html"></div>
 
-<h1>Hello, world!</h1>
+<p>This is Event Manager main page!</p>
+<div th:if="${accountCreated != null}">
+    <p>Created account for:
+        <span th:text="${accountCreated}"></span>
+    </p>
+</div>
 
 
 <!-- Optional JavaScript -->
