--- a/src/main/resources/templates/navbar/navbar.html
+++ b/src/main/resources/templates/navbar/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
-     xmlns:th="http://www.thymeleaf.org">
+     xmlns:th="http://www.thymeleaf.org"
+     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     <a class="navbar-brand justify-content-start"
        href="/">Event Manager</a>
 
