--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,9 +24,10 @@
 
 <p>This is Event Manager main page!</p>
 <div th:if="${accountCreated != null}">
-    <p>Created account for:
-        <span th:text="${accountCreated}"></span>
-    </p>
+    <p>Created account for: <span th:text="${accountCreated}">.</span></p>
+</div>
+<div th:if="${loggedUser != null}">
+    <p>User: <span th:text="${loggedUser}"></span> logged in.</p>
 </div>
 
 
