--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,11 +29,11 @@
                           th:object="${loginForm}"
                           method="post">
                         <div class="form-group">
-                            <label>Login</label>
+                            <label>Email</label>
                             <input class="form-control"
                                    placeholder="Email Address"
-                                   th:field="*{email}"
-                                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                                   th:field="*{email}">
+<!--                                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">-->
                         </div>
                         <div class="form-group">
                             <label>Password</label>
@@ -43,11 +43,10 @@
                                    th:field="*{password}">
                         </div>
                         <div class="form-group">
-                            <button type="submit"
-                                    class="btn btn-primary btn-block"> Login
-                            </button>
-                            <div th:object="${error}">
-                            </div>
+                            <input type="submit"
+                                   value="Login"
+                                   class="btn btn-info btn-block">
+                            <div th:text="${error}"></div>
                         </div>
                     </form>
                 </article>
