register/login/logout + navbar done and working /11

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
     <p>Created account for: <span th:text="${accountCreated}">.</span></p>
 </div>
 <div th:if="${auth != null}">
-    <p>User: <span th:text="${auth}"></span> logged in.</p>
+    <p>User: <span th:text="${auth}"></span> logged out.</p>
 </div>
 
 
