--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -48,11 +48,11 @@
                             <div class="col-xs-6 col-sm-6 col-md-12">
                                 <div class="form-group">
                                     <input type="text"
-                                           name="username"
-                                           id="username"
+                                           name="nickname"
+                                           id="nickname"
                                            class="form-control input-sm"
-                                           placeholder="Username"
-                                           th:field="*{username}">
+                                           placeholder="Nickname"
+                                           th:field="*{nickname}">
 
                                     <small>*3-50 characters
                                     </small>
