--- a/src/main/resources/templates/navbar/navbar.html
+++ b/src/main/resources/templates/navbar/navbar.html
@@ -4,12 +4,30 @@
     <a class="navbar-brand justify-content-start"
        href="/">Event Manager</a>
 
-    <form action="/login">
-        <button class="btn btn-success ml-auto mr-1">Login</button>
-    </form>
-
-    <form action="/register">
-        <button class="btn btn-success mr-1">Register</button>
-    </form>
-
+    <div sec:authorize="isAnonymous()">
+        <div class="nav-item">
+            <form action="/login">
+                <button class="btn btn-success ml-auto mr-1">Login</button>
+            </form>
+        </div>
+    </div>
+    <div sec:authorize="isAnonymous()">
+        <div class="nav-item">
+            <form action="/register">
+                <button class="btn btn-success mr-1">Register</button>
+            </form>
+        </div>
+    </div>
+    <div sec:authorize="isAuthenticated()">
+        <div class="nav-item">
+            <button class="btn btn-success mr-1"><span sec:authentication="name">Logged user</span></button>
+        </div>
+    </div>
+    <div sec:authorize="isAuthenticated()">
+        <div class="nav-item">
+            <form action="/logout">
+                <button class="btn btn-success mr-1">Logout</button>
+            </form>
+        </div>
+    </div>
 </nav>
