--- a/src/main/resources/templates/navbar/navbar.html
+++ b/src/main/resources/templates/navbar/navbar.html
@@ -6,28 +6,34 @@
 
     <div sec:authorize="isAnonymous()">
         <div class="nav-item">
-
-                <a class="btn btn-success ml-auto mr-1" href="/loginForm">Login</a>
-
+            <a class="btn btn-success ml-auto mr-1"
+               href="/loginForm">Login</a>
         </div>
     </div>
+
     <div sec:authorize="isAnonymous()">
         <div class="nav-item">
-            <form action="/register">
-                <button class="btn btn-success mr-1">Register</button>
-            </form>
+            <a class="btn btn-success mr-1"
+               href="/register">Register</a>
         </div>
     </div>
+
+    <div sec:authorize="hasRole('ROLE_ADMIN')">
+        <a class="btn btn-success mr-1"
+           href="/adminpanel">ADMIN PANEL</a>
+    </div>
+
     <div sec:authorize="isAuthenticated()">
         <div class="nav-item">
-            <button class="btn btn-success mr-1">Logged as: <span sec:authentication="name">Logged user</span></button>
+            <a class="btn btn-success mr-1"
+               href="#">Logged as: <span sec:authentication="name">Logged user</span></a>
         </div>
     </div>
+
     <div sec:authorize="isAuthenticated()">
         <div class="nav-item">
-            <form action="/logout">
-                <button class="btn btn-success mr-1">Logout</button>
-            </form>
+            <a class="btn btn-success mr-1"
+               href="/logout">Logout</a>
         </div>
     </div>
 </nav>
