fixed spring security authorization     /6

--- a/src/main/resources/templates/adminpanel.html
+++ b/src/main/resources/templates/adminpanel.html
@@ -26,7 +26,7 @@
 
 <!-- //TODO admin panel with list of users and Role.ROLE_ORGANISER requests-->
 
-
+<h1>ADMIN PANEL</h1>
 
 
 <!-- Optional JavaScript -->
