--- a/src/main/resources/templates/adminpanel.html
+++ b/src/main/resources/templates/adminpanel.html
@@ -23,11 +23,36 @@
 <div th:include="/navbar/navbar.html"></div>
 
 
-
 <!-- //TODO admin panel with list of users and Role.ROLE_ORGANISER requests-->
 
-<h1>ADMIN PANEL</h1>
+<table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Email</th>
+        <th scope="col">Nickname</th>
+        <th scope="col">BCryptPassword</th>
+        <th scope="col">ROLE</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="user : ${allUsers}">
+        <td><span th:text="${user.id}"></span></td>
+        <td><span th:text="${user.email}"></span></td>
+        <td><span th:text="${user.nickname}"></span></td>
+        <td><span th:text="${user.password}"></span></td>
+        <td><span th:text="${user.role}"></span></td>
 
+        <!--  //TODO buttons not appearing -->
+        
+        <td th:if="${user.role == 'ROLE_USER'}">
+            <button>UPGRADE ROLE</button>
+        </td>
+        <td th:if="${user.role == 'ROLE_ORGANISER'}">
+            <button>DOWNGRADE ROLE</button>
+        </td>
+    </tbody>
+</table>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
