--- a/src/main/resources/templates/navbar/navbar.html
+++ b/src/main/resources/templates/navbar/navbar.html
@@ -11,16 +11,16 @@
         </div>
     </div>
 
-    <div sec:authorize="isAnonymous()">
+    <div sec:authorize="hasRole('ROLE_ADMIN')">
+        <a class="btn btn-success mr-1"
+           href="/adminpanel">ADMIN PANEL</a>
+    </div>
+
+    <div sec:authorize="isAnonymous() or hasRole('ROLE_ADMIN')" >
         <div class="nav-item">
             <a class="btn btn-success mr-1"
                href="/register">Register</a>
         </div>
-    </div>
-
-    <div sec:authorize="hasRole('ROLE_ADMIN')">
-        <a class="btn btn-success mr-1"
-           href="/adminpanel">ADMIN PANEL</a>
     </div>
 
     <div sec:authorize="isAuthenticated()">
