--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
         <div class="col-md-6">
             <div class="card">
                 <article class="card-body">
-                    <form th:action="@{/login}"
+                    <form th:action="@{/loginForm}"
                           th:object="${loginForm}"
                           method="post">
                         <div class="form-group">
