--- a/src/main/resources/templates/navbar/navbar.html
+++ b/src/main/resources/templates/navbar/navbar.html
@@ -16,6 +16,13 @@
            href="/adminpanel">ADMIN PANEL</a>
     </div>
 
+    <div sec:authorize="hasAnyRole('ROLE_ORGANISER', 'ROLE_ADMIN')" >
+        <div class="nav-item">
+            <a class="btn btn-success mr-1"
+               href="/addEvent">Add Event</a>
+        </div>
+    </div>
+
     <div sec:authorize="isAnonymous() or hasRole('ROLE_ADMIN')" >
         <div class="nav-item">
             <a class="btn btn-success mr-1"
