events work in progress problems with login navbar disappearing buttons /2

--- a/src/main/resources/templates/adminpanel.html
+++ b/src/main/resources/templates/adminpanel.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-<div th:include="/navbar/navbar.html"></div>
+<div th:include="/includes/navbar.html"></div>
 
 
 <!-- //TODO admin panel with list of users and Role.ROLE_ORGANISER requests-->
