--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-<div th:include="/navbar/navbar.html"></div>
+<div th:include="/includes/navbar.html"></div>
 
 <p>This is Event Manager main page!</p>
 <div th:if="${accountCreated != null}">
