--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-<div th:include="/navbar/navbar.html"></div>
+<div th:include="/includes/navbar.html"></div>
 
 <div class="container">
     <div class="row justify-content-center">
