fixing navbar alignment event list on main page problems with login navbar disappearing buttons and sorting event list /4

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -30,7 +30,7 @@
                 <div class="panel-body">
 
                     <form role="form"
-                          th:action="@{/addEvent}"
+                          th:action="@{/organiser/addevent}"
                           th:object="${eventForm}"
                           method="post">
 
