--- a/src/main/resources/templates/includes/navbar.html
+++ b/src/main/resources/templates/includes/navbar.html
@@ -12,12 +12,21 @@
 
     <!-- Search form -->
     <!-- //TODO search criteria   -->
-    <div class="w-25 justify-content-center order-1">
-        <form class="form-inline mr-sm-2">
-            <input class="form-control mr-sm-2"
+    <div class="w-50 justify-content-center order-1">
+        <form class="form-inline mr-sm-2"
+              method="get"
+              action="/search">
+            <input class="form-control mr-sm-2 w-25"
                    type="search"
-                   placeholder="Search for events"
-                   aria-label="Search">
+                   placeholder="Event Title"
+                   aria-label="Search"
+                   name="eventName">
+            <select class="custom-select mr-sm-2"
+                    name="eventFilter">
+                <option value="future">Future Events</option>
+                <option value="ongoing">Ongoing Events</option>
+                <option value="all">All Events</option>
+            </select>
             <button class="btn btn-success mr-sm-2"
                     type="submit">Search
             </button>
@@ -26,47 +35,54 @@
 
 
     <!-- Burger menu inside -->
-    <div class="w-50 justify-content-end mt-1 navbar-collapse collapse order-2 order-md-last" id="collapsingNavbar">
+    <div class="w-50 justify-content-end mt-1 navbar-collapse collapse order-2 order-md-last"
+         id="collapsingNavbar">
         <ul class="navbar-nav">
-            <li class="nav-item" sec:authorize="isAnonymous()">
-                    <a class="btn btn-success mr-sm-2"
-                       href="/loginForm">Login</a>
+            <li class="nav-item"
+                sec:authorize="isAnonymous()">
+                <a class="btn btn-success mr-sm-2"
+                   href="/loginForm">Login</a>
             </li>
-            <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="btn btn-success mr-sm-2 dropdown-toggle"
-                       href="#"
-                       id="navbarDropdown"
-                       role="button"
-                       data-toggle="dropdown"
-                       aria-haspopup="true"
-                       aria-expanded="false">
-                        Admin Panel
-                    </a>
-                    <div class="dropdown-menu"
-                         aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item"
-                           href="/admin/adminpanelusers">Users Panel</a>
-                        <div class="dropdown-divider"></div>
-                        <!-- //TODO-->
-                        <a class="dropdown-item"
-                           href="#">Events Panel</a>
-                    </div>
+            <li class="nav-item dropdown"
+                sec:authorize="hasRole('ROLE_ADMIN')">
+                <a class="btn btn-success mr-sm-2 dropdown-toggle"
+                   href="#"
+                   id="navbarDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    Admin Panel
+                </a>
+                <div class="dropdown-menu"
+                     aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item"
+                       href="/admin/adminpanelusers">Users Panel</a>
+                    <div class="dropdown-divider"></div>
+                    <!-- //TODO-->
+                    <a class="dropdown-item"
+                       href="#">Events Panel</a>
+                </div>
             </li>
-            <li class="nav-item" sec:authorize="hasAnyRole('ROLE_ORGANISER', 'ROLE_ADMIN')">
-                    <a class="btn btn-success mr-sm-2"
-                       href="/organiser/addevent">Add Event</a>
+            <li class="nav-item"
+                sec:authorize="hasAnyRole('ROLE_ORGANISER', 'ROLE_ADMIN')">
+                <a class="btn btn-success mr-sm-2"
+                   href="/organiser/addevent">Add Event</a>
             </li>
-            <li class="nav-item" sec:authorize="isAnonymous() or hasRole('ROLE_ADMIN')">
-                    <a class="btn btn-success mr-sm-2"
-                       href="/register">Register</a>
+            <li class="nav-item"
+                sec:authorize="isAnonymous() or hasRole('ROLE_ADMIN')">
+                <a class="btn btn-success mr-sm-2"
+                   href="/register">Register</a>
             </li>
-            <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="btn btn-success mr-sm-2"
-                       href="#">Logged as: <span sec:authentication="name">Logged user</span></a>
+            <li class="nav-item"
+                sec:authorize="isAuthenticated()">
+                <a class="btn btn-success mr-sm-2"
+                   href="#">Logged as: <span sec:authentication="name">Logged user</span></a>
             </li>
-            <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="btn btn-success mr-sm-2"
-                       href="/logout">Logout</a>
+            <li class="nav-item"
+                sec:authorize="isAuthenticated()">
+                <a class="btn btn-success mr-sm-2"
+                   href="/logout">Logout</a>
             </li>
         </ul>
     </div>
