--- a/src/main/resources/templates/adminpanelusers.html
+++ b/src/main/resources/templates/adminpanelusers.html
@@ -57,7 +57,8 @@
             <span th:if="${user.role==T(pl.sda.eventmanager.model.Role).ROLE_ORGANISER}">
                 <a class="btn btn-success mr-1"
                    href="#">DOWNGRADE ROLE</a></span></td>
-        <td><a class="btn btn-success mr-1"
+        <td><span th:if="${user.role!=T(pl.sda.eventmanager.model.Role).ROLE_ADMIN}">
+            <a class="btn btn-success mr-1"
                href="#">DELETE ACCOUNT</a></td>
 
 
