searched event name persists to next page

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -47,6 +47,7 @@
 
                         <div class="row">
                             <div class="col-xs-6 col-sm-6 col-md-12">
+                                <div>Event Start</div>
                                 <div class="form-group">
                                     <input type="datetime-local"
                                            name="eventStart"
@@ -60,6 +61,7 @@
 
                         <div class="row">
                             <div class="col-xs-6 col-sm-6 col-md-12">
+                                <div>Event End</div>
                                 <div class="form-group">
                                     <input type="datetime-local"
                                            name="eventEnd"
