--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,9 @@
 
 </head>
 <body>
+<!-- navbar on top -->
 <div th:include="/includes/navbar.html"></div>
+
 
 <div class="container">
     <div class="row justify-content-center">
@@ -32,7 +34,8 @@
                             <label>Email</label>
                             <input class="form-control"
                                    placeholder="Email Address"
-                                   th:field="*{email}">
+                                   th:field="*{email}"
+                                   autofocus>
                         </div>
                         <div class="form-group">
                             <label>Password</label>
